register swagger
